--- a/assets/scss/front/course-spotlight/index.scss
+++ b/assets/scss/front/course-spotlight/index.scss
@@ -17,7 +17,7 @@
     display: flex;
     position: relative;
     width: 100%;
-    
+    align-items: flex-start;
     a {
         text-decoration: none;
         color: inherit;
